--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,3 @@
 ﻿[*.cs]
 
-# SA1010: Opening square brackets should be spaced correctly
-dotnet_diagnostic.SA1010.severity = none
-
-# CA1707: Identifiers should not contain underscores
-dotnet_diagnostic.CA1707.severity = suggestion
+dotnet_code_quality.CA1062.null_check_validation_methods = ne14.library.fluent_errors.Extensions.AssertionExtensions.MustExist``1(``0,System.String,System.Func{System.Boolean})
