--- a/stryker-config.json
+++ b/stryker-config.json
@@ -3,8 +3,9 @@
     "mutate": [
       "!**/*.startup_extensions/Extensions/*Extensions.cs"
     ],
-	"ignore-methods": [
-      "Dispose"
+    "ignore-methods": [
+      "Dispose",
+      "GC.SuppressFinalize"
     ],
     "thresholds": {
       "high": 100,
