--- a/ne14.library.startup_extensions/ne14.library.startup_extensions.csproj
+++ b/ne14.library.startup_extensions/ne14.library.startup_extensions.csproj
@@ -33,7 +33,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
     <PackageReference Include="ne14.library.fluent_errors" Version="1.0.2" />
-    <PackageReference Include="ne14.library.rabbitmq" Version="1.0.0-alpha-0007" />
     <PackageReference Include="ne14.library.standards" Version="1.0.2" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.6.0" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.6.0" />
@@ -46,6 +45,10 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\library.rabbitmq\ne14.library.rabbitmq\ne14.library.rabbitmq.csproj" />
   </ItemGroup>
 
 </Project>
