--- a/ne14.library.messaging.tests/ne14.library.messaging.tests.csproj
+++ b/ne14.library.messaging.tests/ne14.library.messaging.tests.csproj
@@ -14,8 +14,6 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="ne14.library.standards.test" Version="1.0.3" />
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
     <PackageReference Include="xunit" Version="2.6.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ne14.library.startup_extensions\ne14.library.startup_extensions.csproj" />
+    <ProjectReference Include="..\ne14.library.messaging\ne14.library.messaging.csproj" />
   </ItemGroup>
 
 </Project>
