--- a/ne14.library.messaging/ne14.library.messaging.csproj
+++ b/ne14.library.messaging/ne14.library.messaging.csproj
@@ -24,10 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Analyse" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-    <PackageReference Include="ne14.library.standards" Version="1.0.8" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
-    <PackageReference Include="System.Text.Json" Version="8.0.3" />
+    <PackageReference Include="System.Text.Json" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
